<resources>

    <!--ui-->

    <string name="app_name">SMS Assistant</string>
    <string name="simple_version">v2.6.02_beta</string>

    <string name="usage">
        • This app needs SMS Write/Read Permission to work, and will change your default sms app temporarily.\n
         • The basic function is to filter text messages. But this is mainly for the Chinese text messages, so you need to add RegEx rules in the Advanced Function.\n
         • In the Advanced Function, you can write your own Java RegEx to match messages. Or search by contacts or time.\n
         • IMPORTANT: Before making any deletions, make sure you have made a backup of your original message. For the consequences of accidental deletion of important information at your own risk.
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_clean">Clean</string>
    <string name="nav_recognize">Recognize</string>
    <string name="nav_other">Other</string>
    <string name="action_settings">Exit</string>


    <string name="smslist_detail">Detail:</string>
    <string name="smslist_from">From:</string>
    <string name="smslist_date">Date:</string>
    <string name="smslist_content">Content:</string>

    <string name="detail_dialog_from">From:</string>
    <string name="detail_dialog_date">Date:</string>
    <string name="detail_dialog_content">Content:</string>


    <string name="addrule_rule">Rules:</string>
    <string name="addrule_test_text">Test text:</string>
    <string name="addrule_test_btn">Test it</string>
    <string name="addrule_test_result">Test results</string>

    <string name="advance_other_attention">Note: The lookup in this mode is valid for a single time and does not affect the RegEx Mode\'s switch.</string>
    <string name="advance_other_search_by_contact">Search by contacts</string>
    <string name="advance_other_search_by_contact_regex">RegEx here</string>
    <string name="advance_other_search_by_contact_btn">Search</string>
    <string name="advance_other_search_by_time">Search by time</string>
    <string name="advance_other_search_by_time_start">Start time：</string>
    <string name="advance_other_search_by_time_start_pick">click to pick</string>
    <string name="advance_other_search_by_time_end">End time：</string>
    <string name="advance_other_search_by_time_end_pick">click to pick</string>
    <string name="advance_other_search_by_time_btn">Search</string>

    <string name="advance_regex_switch">Turn on RegEx Mode</string>
    <string name="advance_regex_attention">Tip: Please try to narrow the RegEx match range, so as not to accidentally deleted.</string>
    <string name="advance_regex_rules">Current rules:</string>
    <string name="advance_regex_online_rules">Online update</string>
    <string name="advance_regex_online_rules_notice">Online rules are only for Simplified Chinese.</string>
    <string name="advance_regex_online_rules_updated">updated</string>
    <string name="advance_regex_clear_rules">Delete all?</string>
    <string name="advance_regex_network_error">Network error</string>
    <string name="advance_regex_server_error">Server error</string>


    <string name="about_writer">Writer:</string>
    <string name="about_github">https://github.com/RinCode</string>
    <string name="about_version">SMS Assistant(SMS Deleter) v2.6.02_beta</string>
    <string name="about_translate_by">Translated By Google.</string>

    <!--end_ui-->

    <string name="fragment_clean">Clean</string>
    <string name="fragment_clean_willdel">We will delete all the contents of the list except white list</string>
    <string name="fragment_clean_error">Delete failed, please set the default SMS application after retry.</string>
    <string name="fragment_clean_success">Delete the success, exit the application before you restore the default SMS application.</string>


    <string name="fragment_advance">Advanced</string>
    <string name="fragment_advance_markread">mark all SMS read</string>

    <string name="fragment_regex_mode">RegEx Mode</string>
    <string name="fragment_regex_no_exist_regex">There are no rules, please click the lower right button to add.</string>
    <string name="fragment_regex_no_regex">Please enter a RegEx</string>
    <string name="fragment_regex_error_regex">RegEx may be syntactically wrong</string>
    <string name="fragment_regex_find_result">Matched result:</string>
    <string name="fragment_regex_no_match">No match</string>
    <string name="fragment_regex_save_successful">Saved</string>
    <string name="fragment_regex_save_failed">Save failed</string>

    <string name="fragment_other_mode">Other Mode</string>
    <string name="fragment_addrule">Add rule</string>
    <string name="fragment_other_time_timeerr">Time error</string>
    <string name="fragment_other_time_crash">Time error or not set</string>

    <string name="fragment_recognize">Recognize</string>
    <string name="fragment_recognized_text1">Found auth code:</string>
    <string name="fragment_recognized_text2">, and has copied to clipboard.</string>
    <string name="fragment_recognized_failed">Can\'t recognize code, please copy by yourself.</string>
    <string name="recognize_switch">Start listening sms:</string>
    <string name="recognize_attention">Attention:\n
1. This function needs to keep running in the background.\n
2. We only use simple matching rules to match (matching the length of the message which is longer than or equal to 4 number characters). Therefore, if there are multiple results, it is temporarily unrecognizable.</string>


    <string name="fragment_about">About</string>

    <string name="restart">Please restart this app</string>
    <string name="warning">Warning</string>
    <string name="accept">Accpet</string>
    <string name="refuse">Refuse</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="add_to_whitelist">Add to white list</string>
    <string name="remove_from_whitelist">Remove from white list</string>
    <string name="sure">OK</string>
    <string name="sure_delete">Sure？</string>
    <string name="cancel">Cancel</string>
    <string name="delete_err">Failed</string>
    <string name="delete_success">Succeed</string>
    <string name="no_data_del">No data to delete</string>
    <string name="start_listening">SMS Listening Started</string>
    <string name="stop_listening">SMS Listening Stopped</string>
    <string name="processing">Processing</string>
    <string name="succeed">succeed</string>
    <string name="failed">failed</string>

    <string name="tos">Attention</string>
    <string name="no_sms_permission">NO SMS </string>
    <string name="no_sms_try_again">Please set as the default SMS application and try again</string>
    <string name="no_sms_detected">No data detected, please drop down to refresh.</string>

</resources>