<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:text="@string/advance_other_attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FF909090" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >
        <TableRow android:paddingBottom="10dp">
            <TextView
                android:text="@string/advance_other_search_by_contact"/>
        </TableRow>
        <TableRow android:paddingBottom="10dp">
            <EditText
                android:id="@+id/contact_rule"
                android:hint="@string/advance_other_search_by_contact_regex" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/contact_search"
                android:text="@string/advance_other_search_by_contact_btn"
                android:layout_width="wrap_content"/>
        </TableRow>
    </TableLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >
        <TableRow android:paddingBottom="10dp">
            <TextView
                android:text="@string/advance_other_search_by_time"/>
        </TableRow>
        <TableRow android:paddingBottom="10dp">
            <TextView
                android:id="@+id/start_time_lab"
                android:textSize="20sp"
                android:text="@string/advance_other_search_by_time_start"
                />
            <TextView
                android:id="@+id/start_time"
                android:textSize="20sp"
                android:text="@string/advance_other_search_by_time_start_pick"
                />
        </TableRow>
        <TableRow android:paddingBottom="10dp">
            <TextView
                android:id="@+id/end_time_lab"
                android:textSize="20sp"
                android:text="@string/advance_other_search_by_time_end"
                />
            <TextView
                android:id="@+id/end_time"
                android:textSize="20sp"
                android:text="@string/advance_other_search_by_time_end_pick"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/time_search"
                android:text="@string/advance_other_search_by_time_btn"
                android:layout_width="wrap_content"/>
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FF909090" />
</LinearLayout>